--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "numeral": "^2.0.6",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
